[gd_scene load_steps=13 format=3 uid="uid://lxalv8rqbk0c"]

[ext_resource type="Script" uid="uid://daueiqykpti77" path="res://Instrument/Instrument.gd" id="1_5u75h"]
[ext_resource type="PackedScene" uid="uid://li05xa022xnw" path="res://VFX/sound_particles.tscn" id="2_pvdqr"]
[ext_resource type="Script" uid="uid://c1oy8va3logcp" path="res://States/state_machine.gd" id="3_kd48f"]
[ext_resource type="Script" uid="uid://blr8ho4ugylvs" path="res://States/Player/Combat/PlayerCombatIdle.gd" id="5_m54yn"]
[ext_resource type="AudioStream" uid="uid://ch7mga6ovy6gd" path="res://Instrument/SFX/Violin/violin1.wav" id="6_7b1ot"]
[ext_resource type="Script" uid="uid://bqcyw84s3jw3r" path="res://States/Player/Combat/AttackArrow.gd" id="6_ds1ep"]
[ext_resource type="Script" uid="uid://4yxdoa3on7pb" path="res://States/Player/Combat/AttackRing.gd" id="7_m54yn"]
[ext_resource type="Script" uid="uid://bgcbxhef1f7dg" path="res://States/Player/Combat/AttackWings.gd" id="8_7b1ot"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nbgvm"]
radius = 3.643636

[sub_resource type="BoxMesh" id="BoxMesh_am657"]
size = Vector3(0.32, 0.59, 0.11)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fjrip"]
albedo_color = Color(0.6422956, 0.4013693, 6.738305e-07, 1)

[sub_resource type="BoxMesh" id="BoxMesh_pcpy0"]
size = Vector3(0.085, 0.335, 0.055)

[node name="Instrument" type="Node3D" node_paths=PackedStringArray("attack_area", "vfx_spawnpoint", "combat_statemachine") groups=["Instrument"]]
script = ExtResource("1_5u75h")
damage_multiplier = 2.0
attack_area = NodePath("EffectArea")
vfx_scene = ExtResource("2_pvdqr")
vfx_spawnpoint = NodePath("VFXSpawn")
combat_statemachine = NodePath("CombatStateMachine")

[node name="EffectArea" type="Area3D" parent="."]

[node name="TrumpetHitbox" type="CollisionShape3D" parent="EffectArea"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -0.016580403, 0, -0.3086995)
shape = SubResource("SphereShape3D_nbgvm")

[node name="VFXSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.485, 0)

[node name="CombatStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_kd48f")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://c1oy8va3logcp"

[node name="Idle" type="Node" parent="CombatStateMachine" node_paths=PackedStringArray("attack_1", "attack_2", "attack_3")]
script = ExtResource("5_m54yn")
attack_1 = NodePath("../AttackRing")
attack_2 = NodePath("../AttackWings")
attack_3 = NodePath("../AttackArrow")
metadata/_custom_type_script = "uid://blr8ho4ugylvs"

[node name="AttackArrow" type="Node" parent="CombatStateMachine" node_paths=PackedStringArray("attack_spawn")]
script = ExtResource("6_ds1ep")
attack_spawn = NodePath("../../VFXSpawn")
metadata/_custom_type_script = "uid://bqcyw84s3jw3r"

[node name="AttackRing" type="Node" parent="CombatStateMachine" node_paths=PackedStringArray("attack_spawn")]
script = ExtResource("7_m54yn")
attack_spawn = NodePath("../../VFXSpawn")
metadata/_custom_type_script = "uid://4yxdoa3on7pb"

[node name="AttackWings" type="Node" parent="CombatStateMachine" node_paths=PackedStringArray("attack_spawn")]
script = ExtResource("8_7b1ot")
attack_spawn = NodePath("../../VFXSpawn")
metadata/_custom_type_script = "uid://bgcbxhef1f7dg"

[node name="Audio" type="Node3D" parent="."]

[node name="SoundWeakAttack" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("6_7b1ot")

[node name="Visual" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(-1, 8.742278e-08, 3.821371e-15, 0, -4.371139e-08, 1, 8.742278e-08, 1, 4.371139e-08, 1.8727498e-08, 0, -0.16928613)
mesh = SubResource("BoxMesh_am657")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fjrip")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(-1, 8.742278e-08, 3.821371e-15, 0, -4.371139e-08, 1, 8.742278e-08, 1, 4.371139e-08, -1.8727498e-08, 0, -0.59772134)
mesh = SubResource("BoxMesh_pcpy0")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fjrip")
